# salary-rest-service

./: .env.example  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml
app/: auth.py  config.py  database.py  main.py  models.py  routes.py
src/app/: api.py  auth.py  main.py  models.py  services.py
src/app/core/: config.py
src/app/static/css/: main.css
src/app/templates/: index.html
tests/: conftest.py  test_api.py  test_main.py
